feat: 提升白天主题 Markdown 可读性；文章详情页居中布局；统一封面图（web_blog.png/YOLO_cs2.jpg）；发布新文章《我的个人博客项目：Astro + React + Tailwind 构建与发布》

--- a/.npmrc
+++ b/.npmrc
@@ -1,2 +1,7 @@
+; 本地缓存目录（仅用于开发，已在 .gitignore 忽略，避免把大文件提交到仓库）
 cache=./npm-cache
-prefix=./node_modules/.bin
+
+; 注意：npm 从 v9 开始禁止在项目级 .npmrc 设置 prefix。
+; 该设置会导致 `npm ERR! config prefix cannot be changed from project config` 报错。
+; 如需自定义全局前缀，请在用户级或系统级 .npmrc 配置（例如：%AppData%\npm\etc\npmrc）。
+; 因此这里移除 prefix 设置，避免本地启动时的干扰错误。
