--- a/package.json
+++ b/package.json
@@ -17,6 +17,10 @@
     "astro": "^4.10.0",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.24",
+    "github-markdown-css": "^5.8.1",
+    "marked": "^16.4.1",
+    "marked-highlight": "^2.2.2",
+    "prismjs": "^1.30.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.9.5",
