--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.24",
     "github-markdown-css": "^5.8.1",
+    "lucide-react": "^0.553.0",
     "marked": "^16.4.1",
     "marked-highlight": "^2.2.2",
     "prismjs": "^1.30.0",
